# fileshare

./: .gitignore  .gitmodules  Cargo.toml  elm.js  frontend.html  todo.txt  work-log
resources/: app.css  app.min.js  index.html  login.html  main.css
src/: apierror.rs  authorization.rs  database.rs  filetools.rs  html.rs  main.rs  resources.rs
src/filetools/: dir.rs  files.rs
src/handlers/: access_shared.rs  create_directory.rs  filelist.rs  login.rs  mod.rs  share.rs  upload.rs
src/http/: handlers.rs  headers.rs  mod.rs
src/rendering/: files.rs  mod.rs  share.rs
web/: .gitignore  app.css  bower.json  elm-package.json  gulpfile.js  index.html  index.js  local.proxy.json  package.json  todo.txt  webpack.config.js
web/src/: AddressableStates.elm  AttributesExtended.elm  Css.elm  Errors.elm  Files.elm  Main.elm  Menu.elm  Path.elm  Pure.elm  ResultsExtended.elm  Service.elm  SharePrompt.elm  index.html  index.js  title.jsx
web/src/Modals/: CreateDir.elm
web/src/UI/: Colors.elm  Components.elm
web/src/Views/: CreateDir.elm  Folder.elm  Share.elm  Upload.elm
web/src/app/: app.component.html  app.component.ts  app.module.ts  file-sharing.service.spec.ts  file-sharing.service.ts
web/src/app/file-list/: file-list.component.html  file-list.component.ts
web/src/app/file-list/file-list-item/: file-list-item.component.css  file-list-item.component.html  file-list-item.component.ts
web/src/app/file-list/nav-bar/: nav-bar.component.html  nav-bar.component.ts
web/stylesheet/: FileshareCss.elm  Stylesheets.elm
